# consumer

./: .gitignore  pyproject.toml  settings.toml
consumer/: config.py  main.py
